# opencode-led

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
debian/DEBIAN/: control  postinst
plugin/: status-pusher.ts
src/: config.rs  icons.rs  main.rs  platform.rs  server.rs  sessions.rs  store.rs  tray.rs  wm.rs
tools/: gen_icons.py
