[package]
name = "opencode-traffic-light"
version = "0.4.1"
edition = "2021"
description = "A floating always-on-top traffic light monitor for opencode task status"
license = "MIT"

[[bin]]
name = "opencode-traffic-light"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.35"
egui_extras = { version = "0.35", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
parking_lot = "0.12"
raw-window-handle = "0.6"
x11rb = "0.13"
rfd = "0.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
